--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,7 +1,7 @@
 /* Full page background */
 body {
   background: url("/background.png") center/cover fixed no-repeat;
-  font-family: 'Almarai', sans-serif;
+  font-family: 'El Messiri', sans-serif;
 
 }
 
