--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&display=swap');
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  --main-font: 'Almarai', sans-serif;
+  --main-font: 'El Messiri', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -27,7 +27,7 @@ a:hover {
 
 body {
   margin: 0;
-  font-family: 'Almarai', sans-serif; 
+  font-family: 'El Messiri', sans-serif; 
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -69,4 +69,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+body, h1, h2, h3, h4, h5, h6, p, a, button {
+  font-family: 'El Messiri', sans-serif !important;
 }
