--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -16,7 +16,7 @@
   /* Gradients */
   --gradient-main: linear-gradient(135deg, var(--primary-blue) 0%, var(--primary-green) 100%);
 
-  --main-font: 'Almarai', sans-serif;
+  --main-font: 'El Messiri', sans-serif;
 }
 
 body {
